--- a/index.html
+++ b/index.html
@@ -13,17 +13,20 @@
 
 <body>
 
-  <header>
-    <h1>Benvenuto nel mio Progetto Web</h1>
-  </header>
+  <div id="app">
+    <header>
+      <h1>{{ message }}</h1>
+    </header>
 
-  <main>
-    <p>Questo è un semplice boilerplate per un progetto HTML, CSS e JavaScript.</p>
-  </main>
+    <main>
+      <p>Questo è un semplice boilerplate per un progetto HTML, CSS e JavaScript.</p>
+      <img :src="imageSrc" alt="Vue Image" class="img-fluid">
+    </main>
 
-  <footer>
-    <p>&copy; 2024 Jonathan</p>
-  </footer>
+    <footer>
+      <p>&copy; 2024 Jonathan</p>
+    </footer>
+  </div>
 
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
